force-app/main/default/objects/ICS_Scorecard_Adverse_Reason__c/ICS_Scorecard_Adverse_Reason__c.object-meta.xml
<CustomObject>
    <label>ICS Scorecard Adverse Reason</label>
    <nameField>
        <displayFormat>SCR-{00000000}</displayFormat>
        <label>ICS Scorecard Adverse Reason Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICS Scorecard Adverse Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>