force-app/main/default/objects/ICS_Scorecard_Adverse_Reason__c/fields/Adverse_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Reason_Code__c</fullName>
    <label>Adverse Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>