force-app/main/default/objects/ICS_Scorecard_Adverse_Reason__c/fields/Adverse_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Reason_Description__c</fullName>
    <label>Adverse Reason Description</label>
    <type>TextArea</type>
</CustomField>