force-app/main/default/objects/ICS_Scorecard_Adverse_Reason__c/fields/ICS_Scorecard_Result__c.field-meta.xml
<CustomField>
    <fullName>ICS_Scorecard_Result__c</fullName>
    <label>ICS Scorecard Result</label>
    <referenceTo>ICS_Scorecard_Result__c</referenceTo>
    <relationshipLabel>ICS Scorecard Adverse Reasons</relationshipLabel>
    <relationshipName>ICS_Scorecard_Adverse_Reasons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>