force-app/main/default/objects/ICS_Scorecard_Adverse_Reason__c/fields/Score_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Score_Deviation__c</fullName>
    <label>Score Deviation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>